--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,8 @@ body {
 .followMeBar.fixed[data-follow="month"] {
   top: 8rem;
   font-size: 0.6rem;
-  padding: 0.6rem;;
+  padding: 0.6rem;
+  ;
 }
 
 /* TOPNAV */
@@ -77,15 +78,22 @@ body {
   color: var(--mdb-accordion-borderless-btn-color) !important;
 }
 
-.accordion-button:is(:hover, :active) {
+.accordion-button:after,
+.accordion-button:before {
+  filter: invert(1);
+}
+
+.accordion-button:is(:hover, :active),
+.accordion-button.active {
   color: var(--mdb-accordion-borderless-btn-color) !important;
   border-radius: var(--mdb-accordion-borderless-btn-border-radius);
   background-color: var(--mdb-accordion-borderless-btn-bg);
   box-shadow: none;
 }
 
-.accordion-button:is(:after, :before) {
-  filter: invert(1);
+.accordion-button:is(:hover, :active)::after,
+.accordion-button:is(:hover, :active)::before {
+  filter: invert(0);
 }
 
 .accordion-button:not(.collapsed):after {
@@ -154,8 +162,10 @@ body {
 }
 
 .card-item {
-  width: 23rem;
-  height: 21rem;
+  width: 100%;
+  height: 100%;
+  max-width: 23rem;
+  max-height: 21rem;
   background-color: #EBEBEB;
   border-radius: 1.25rem;
 }
@@ -180,6 +190,71 @@ body {
 
 .card.activity-card {
   border-radius: 20px;
+}
+
+/* DRAWER */
+.drawer {
+  position: fixed;
+  overflow-y: auto;
+  max-width: 100%;
+  z-index: 3;
+  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  transition: left 0.5s ease-in-out;
+}
+
+.drawer.left {
+  bottom: 0;
+  left: -24rem;
+  width: 24rem;
+  height: calc(100vh - 72px);
+}
+
+.drawer.show {
+  left: 0;
+}
+
+.overlay-drawer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out, visibility 0s linear 0.5s, backdrop-filter 0.5s ease-in-out; /* Updated transition property */
+  backdrop-filter: blur(0); /* Initial blur value */
+  z-index: 0;
+}
+
+.overlay-drawer.show {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease-in-out, visibility 0s linear 0s, backdrop-filter 0.5s ease-in-out; /* Updated transition property */
+  backdrop-filter: blur(5px); /* Apply blur effect */
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* DATA TABLE */
+/* Ensure that the demo table scrolls */
+th,
+td {
+  white-space: nowrap;
+}
+
+div.dataTables_wrapper {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.dataTables_filter {
+  margin: 1rem 0 1rem 0;
+}
+
+.group-header {
+  background-color: #f2f2f2;
+  font-weight: bold;
 }
 
 /* OVERLAY */
@@ -225,6 +300,12 @@ body {
   transform: scale(2);
   opacity: .8;
   pointer-events: none;
+}
+
+.hero-image {
+  width: fit-content;
+  height: 100%;
+  right: 0;
 }
 
 /* LINKS */
@@ -451,6 +532,17 @@ nav .breadcrumb .breadcrumb-item.active a {
 
 
 
+/* UTILS */
+.rotate-90 {
+  transform: rotate(90deg);
+}
+
+.-rotate-90 {
+  transform: rotate(-90deg);
+}
+
+
+
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 767.9px) {
@@ -460,5 +552,13 @@ nav .breadcrumb .breadcrumb-item.active a {
 
   .news-content {
     max-width: 100%;
+  }
+
+  .hero-title {
+    font-size: 3em !important;
+  }
+
+  #btn-filter-komoditas {
+    width: 100%;
   }
 }
