feat: datatable customized

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 /* LAYOUTS */
 .wrapper {
   width: 100%;
-  max-width: 2000px;
+  max-width: 2656px;
   margin: 0 auto;
 }
 
@@ -223,7 +223,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease-in-out, visibility 0s linear 0.5s, backdrop-filter 0.5s ease-in-out; /* Updated transition property */
-  backdrop-filter: blur(0); /* Initial blur value */
+  /* backdrop-filter: blur(0); */
   z-index: 0;
 }
 
@@ -231,7 +231,7 @@ body {
   opacity: 1;
   visibility: visible;
   transition: opacity 0.5s ease-in-out, visibility 0s linear 0s, backdrop-filter 0.5s ease-in-out; /* Updated transition property */
-  backdrop-filter: blur(5px); /* Apply blur effect */
+  /* backdrop-filter: blur(5px); */
   z-index: 2;
   cursor: pointer;
 }
@@ -241,6 +241,16 @@ body {
 th,
 td {
   white-space: nowrap;
+}
+
+.header-border th {
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+  border-right: 1px solid #dddddd;
+}
+ 
+.header-border th:first-child {
+  border-left: 1px solid #dddddd;
 }
 
 div.dataTables_wrapper {
@@ -558,7 +568,8 @@ nav .breadcrumb .breadcrumb-item.active a {
     font-size: 3em !important;
   }
 
-  #btn-filter-komoditas {
+  #btn-filter-komoditas,
+  .search-box {
     width: 100%;
   }
 }
